chronos_scripts/chronos_k8s/gateway/chronos-gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: chronos-gateway-class
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
