chronos_scripts/chronos_k8s/gateway/chronos-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: chronos-gateway
  namespace: chronos-namespace
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "chronos.local"
      allowedRoutes:
        namespaces:
          from: Same
