chronos_scripts/chronos_k8s/gateway/chronos-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-route
  namespace: chronos-namespace
spec:
  parentRefs:
    - name: chronos-gateway
  hostnames:
    - "chronos.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: employees
          port: 8080
